2007-12-31  Jonathan Chambers  <joncham@gmail.com>

	* mono.sln, libmono.vcproj, mono.vcproj, mono.def: Update .def
	file and fix some eglib target settings.
	
	Contributed under MIT/X11 license.

2007-08-29  Jonathan Chambers <joncham@gmail.com>

	* mono.sln, libmono.vcproj, mono.vcproj, genmdesc.vcproj, monoburg.vcproj: 
	Setup eglib configurations (Debug_eglib, Release_eglib). They
	do not build at this point.
	
	Contributed under MIT/X11 license.

2007-08-29  Jonathan Chambers <joncham@gmail.com>

	* monodiet.vcproj, libgc.vcproj, eglib.vcproj, libmono.vcproj, mono.vcproj, 
	genmdesc.vcproj, monoburg.vcproj, pedump.vcproj: 
	Make output directories a bit more usable.
	
	Contributed under MIT/X11 license.

2007-08-14  Jonathan Chambers <joncham@gmail.com>

	* libmono.vcproj, mono.vcproj, genmdesc.vcproj, monobug.vcproj: 
	Use MONO_DEPENDENCIES_PREFIX env var to locate dependencies. No longer
	need VSDependencies.zip.
	
	* winsetup.bat, runmdesc.bat, runburg.bat: No longer
	need VSDependencies.zip. Use MONO_DEPENDENCIES_PREFIX to
	setup PATH.
	
	* mono.def: Remove missing functions.
	
	Contributed under MIT/X11 license.

2007-08-14  Jonathan Chambers <joncham@gmail.com>

	* libmono.vcproj: Enable intrinsic functions.

2007-05-13  Raja R Harinath  <harinath@gmail.com>

	* Makefile.am (VCPROJS): New.
	(EXTRA_DIST): Don't use glob.

2007-04-27  Jonathan Chambers <joncham@gmail.com>
	
	Combined patch from Michael Jerris <mike@jerris.com> and me.
	* getopt.c: Added public domain implementation for Windows.
	* getopt.h: Added public domain implementation for Windows.
	* getopt_long.c: Added public domain implementation for Windows.
	* test_eglib.vcproj: Update project.
	* eglib.vcproj: Update project. Add pre-build step to copy
	winconfig.h to config.h for msvc build.
	
2007-04-25  Jonathan Chambers  <joncham@gmail.com>

	* mono.sln: Added eglib projects.
	* test_eglib.vcproj: Added.
	* pedump.vcproj: Change output directories for uniformity.