@@ -73,6 +73,9 @@ EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Tests", "Tests", "{ECA11C76-E192-4F67-A8FA-28B637D9716F}"
 EndProject
 Global
+	GlobalSection(DPCodeReviewSolutionGUID) = preSolution
+		DPCodeReviewSolutionGUID = {00000000-0000-0000-0000-000000000000}
+	EndGlobalSection
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug_eglib|Any CPU = Debug_eglib|Any CPU
 		Debug_eglib|Mixed Platforms = Debug_eglib|Mixed Platforms
@@ -125,8 +128,8 @@ Global
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|Mixed Platforms.Build.0 = Debug|x64
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|Win32.ActiveCfg = Debug_eglib|Win32
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|Win32.Build.0 = Debug_eglib|Win32
-		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|x64.ActiveCfg = Debug|x64
-		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|x64.Build.0 = Debug|x64
+		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|x64.ActiveCfg = Debug_eglib|x64
+		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug_eglib|x64.Build.0 = Debug_eglib|x64
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug|Any CPU.ActiveCfg = Debug|Win32
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug|Mixed Platforms.ActiveCfg = Debug|Win32
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Debug|Mixed Platforms.Build.0 = Debug|Win32
@@ -137,9 +140,9 @@ Global
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|Any CPU.ActiveCfg = Release|x64
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|Mixed Platforms.ActiveCfg = Release|x64
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|Mixed Platforms.Build.0 = Release|x64
-		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|Win32.ActiveCfg = Release|Win32
-		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|x64.ActiveCfg = Release|x64
-		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|x64.Build.0 = Release|x64
+		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|Win32.ActiveCfg = Release_eglib|Win32
+		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|x64.ActiveCfg = Release_eglib|x64
+		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release_eglib|x64.Build.0 = Release_eglib|x64
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release|Any CPU.ActiveCfg = Release|Win32
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release|Mixed Platforms.ActiveCfg = Release|Win32
 		{CB0D9E92-293C-439C-9AC7-C5F59B6E0771}.Release|Mixed Platforms.Build.0 = Release|Win32
@@ -202,10 +205,10 @@ Global
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Any CPU.ActiveCfg = Debug|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Mixed Platforms.ActiveCfg = Debug|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Mixed Platforms.Build.0 = Debug|x64
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Win32.ActiveCfg = Debug|Win32
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Win32.Build.0 = Debug|Win32
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|x64.ActiveCfg = Debug|x64
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|x64.Build.0 = Debug|x64
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Win32.ActiveCfg = Debug_eglib|Win32
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|Win32.Build.0 = Debug_eglib|Win32
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|x64.ActiveCfg = Debug_eglib|x64
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug_eglib|x64.Build.0 = Debug_eglib|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug|Any CPU.ActiveCfg = Debug|Win32
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug|Mixed Platforms.ActiveCfg = Debug|Win32
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Debug|Mixed Platforms.Build.0 = Debug|Win32
@@ -216,9 +219,9 @@ Global
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|Any CPU.ActiveCfg = Release|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|Mixed Platforms.ActiveCfg = Release|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|Mixed Platforms.Build.0 = Release|x64
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|Win32.ActiveCfg = Release|Win32
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|x64.ActiveCfg = Release|x64
-		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|x64.Build.0 = Release|x64
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|Win32.ActiveCfg = Release_eglib|Win32
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|x64.ActiveCfg = Release_eglib|x64
+		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release_eglib|x64.Build.0 = Release_eglib|x64
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release|Any CPU.ActiveCfg = Release|Win32
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release|Mixed Platforms.ActiveCfg = Release|Win32
 		{A0EDDCD9-940F-432C-A28F-7EF322437D79}.Release|Mixed Platforms.Build.0 = Release|Win32
@@ -336,8 +339,8 @@ Global
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|Mixed Platforms.Build.0 = Debug|x64
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|Win32.ActiveCfg = Debug_eglib|Win32
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|Win32.Build.0 = Debug_eglib|Win32
-		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|x64.ActiveCfg = Debug|x64
-		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|x64.Build.0 = Debug|x64
+		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|x64.ActiveCfg = Debug_eglib|x64
+		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug_eglib|x64.Build.0 = Debug_eglib|x64
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug|Any CPU.ActiveCfg = Debug|Win32
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug|Mixed Platforms.ActiveCfg = Debug|Win32
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Debug|Mixed Platforms.Build.0 = Debug|Win32
@@ -348,9 +351,9 @@ Global
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|Any CPU.ActiveCfg = Release|x64
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|Mixed Platforms.ActiveCfg = Release|x64
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|Mixed Platforms.Build.0 = Release|x64
-		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|Win32.ActiveCfg = Release|Win32
-		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|x64.ActiveCfg = Release|x64
-		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|x64.Build.0 = Release|x64
+		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|Win32.ActiveCfg = Release_eglib|Win32
+		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|x64.ActiveCfg = Release_eglib|x64
+		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release_eglib|x64.Build.0 = Release_eglib|x64
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release|Any CPU.ActiveCfg = Release|Win32
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release|Mixed Platforms.ActiveCfg = Release|Win32
 		{5DCFA645-3358-4A20-9630-AEAAC5EED2D5}.Release|Mixed Platforms.Build.0 = Release|Win32
@@ -478,8 +481,5 @@ Global
 		{6FDE4E5E-57D0-432F-A987-6C226A7827E4} = {5FE09AA5-C3C9-45EA-A323-36A11B653CEC}
 		{C2EB666E-9146-4B7A-85F6-25F9EA313770} = {5FE09AA5-C3C9-45EA-A323-36A11B653CEC}
 		{80A0620A-3478-4E1A-AA7C-0D2387B892AB} = {ECA11C76-E192-4F67-A8FA-28B637D9716F}
-	EndGlobalSection
-	GlobalSection(DPCodeReviewSolutionGUID) = preSolution
-		DPCodeReviewSolutionGUID = {00000000-0000-0000-0000-000000000000}
 	EndGlobalSection
 EndGlobal
